--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='utf-8'>
+    <title>•</title>
     <link rel="stylesheet" href="style.css">
-    <title>akacannon</title>
 </head>
+
 <body>
-    
+    <main>   
+      ⊢ ▙ ▚ ▛   ┘∞┌  ▝ ▞ ▟ ∎ 
+    </main>
 </body>
+
 </html>
