--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<html>
+<html style="
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    -webkit-font-smoothing: antialiased;">
 
 <head>
     <meta charset='utf-8'>
@@ -6,7 +9,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="
+    background: #000;
+    color: #fff;
+    font-size: 2em;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;">
     <main>   
       ⊢ ▙ ▚ ▛   ┘∞┌  ▝ ▞ ▟ ∎ 
     </main>
