--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     align-items: center;
     justify-content: center;">
     <main>   
-      :)
+      <a style="
+    color: #fff;
+    text-decoration: none;
+      " href="main.html">(ノ ^o^)ノ</a>
     </main>
 </body>
 
