--- a/main.html
+++ b/main.html
@@ -9,20 +9,24 @@
 <body style="
     background-color: #000;">
     <main>
-        <nav style=
-    "color: #fff;">
+        <nav style="color: #fff;">
             <ul style="
-            display: inline;
-            font-size: 30px;
-            ">
-                <li>
-                    a
+                display: inline;
+                font-size: 40px;
+                margin: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 4rem;">
+
+                <li style="display: inline;">
+                    <a style="color: #fff; text-decoration: none;" href="a/projects.html">projects</a>
                 </li>
-                <li>
-                    b
-                </li>
-                <li>
-                    c
+                <li  style="display: inline;">
+                    <a style="color: #fff; text-decoration: none;" href="a/github.html">github</a>
+                </li style="display: inline;">
+                <li style="display: inline;">
+                    <a style="color: #fff; text-decoration: none;" href="a/contactme.html">contact me</a>
                 </li>
             </ul>
         </nav>
