--- a/a/projects.html
+++ b/a/projects.html
@@ -20,7 +20,9 @@ background-color: #fff;">
             font-size: 60px;
             font-weight: 250;
             text-align: center;
-            margin-right: 100px;">AkACaNnON</h1>
+            position: relative;
+            margin-top: 18%;
+            margin-left: -1%;">AkACaNnON</h1>
     </main>
 </body>
 </html>
