--- a/a/projects.html
+++ b/a/projects.html
@@ -23,6 +23,12 @@ background-color: #fff;">
             position: relative;
             margin-top: 18%;
             margin-left: -1%;">AkACaNnON</h1>
+
+        <img style="
+        width: 16rem;
+        padding-left: 43%;
+        margin-top: -30px;
+        -webkit-user-drag: none;" src="../src/asd.png" alt="">
     </main>
 </body>
 </html>
