--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
-<html style="
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    -webkit-font-smoothing: antialiased;">
-
+<!DOCTYPE html>
+<html lang="en" style="margin: 0; padding: 0; scroll-behavior: smooth;">
 <head>
-    <meta charset='utf-8'>
-    <title>•</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>projects</title>
+    <style>
+        @font-face {
+            font-family: dsc;
+            src: url(../fonts/DynamicSchematic-Regular.otf);
+        }
+    </style>
 </head>
-
 <body style="
-    background: #000;
-    color: #fff;
-    font-size: 2em;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;">
-    <main>   
-      <a style="
-    color: #fff;
-    text-decoration: none;
-      " href="main.html">(ノ ^o^)ノ</a>
-
+background-color: #fff;">
+    <main>
+        <div>
+            <h1 style="
+              font-family: dsc;
+              font-size: 60px;
+              font-weight: 250;
+              text-align: center;
+              position: relative;
+              margin-top: 18%;
+              margin-left: -1%;">AkACaNnON
+            </h1>
+        </div>
+        
+        
+        <a href="#info"><img style="
+        width: 16rem;
+        padding-left: 43%;
+        margin-top: -30px;
+        -webkit-user-drag: none;" src="../src/asd.png" alt="">
+        </a>
     </main>
-</body>
 
+    <h1 style="padding-top: 40rem;"> <a name="info">info about me:</a></h1>
+</body>
 </html>
