--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             font-family: dsc;
             src: url(../fonts/DynamicSchematic-Regular.otf);
         }
+
+        @font-face {
+          font-family: manjari;
+          src: url(fonts/Manjari-Regular.ttf);
+        }
     </style>
 </head>
 <body style="
@@ -36,6 +41,8 @@ background-color: #fff;">
         </a>
     </main>
 
-    <h1 style="padding-top: 40rem;"> <a name="info">info about me:</a></h1>
+    
+    <h1 style="padding-top: 40rem; padding-left: 2rem; font-family: manjari;"> <a name="info">info about me:</a></h1>
+
 </body>
 </html>
