--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ background-color: #fff;">
     </main>
 
     
-    <h1 style="padding-top: 40rem; padding-left: 2rem; font-family: manjari;"> <a name="info">info about me:</a></h1>
+    <h1 style="padding-top: 40rem; padding-left: 2rem; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif"> <a name="info">info about me:</a></h1>
 
 </body>
 </html>
