--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@ background-color: #fff;">
         </div>
         
         
-        <a href="#info"><img style="
+        <a href="main.html"><img style="
         width: 16rem;
         padding-left: 43%;
         margin-top: -30px;
         -webkit-user-drag: none;" src="../src/asd.png" alt="">
         </a>
     </main>
-
-
 
 </body>
 </html>
