--- a/main.html
+++ b/main.html
@@ -95,12 +95,14 @@
     <body>
         <nav class="navMenu">
           <a href="index.html">Home</a>
-          <a href="#">Blog</a>
+          <a href="blog.html">Blog</a>
           <a href="#">Work</a>
           <a href="#">About</a>
           <div class="dot"></div>
         </nav>
       </body>
     
+      
+
 </body>
 </html>
