--- a/main.html
+++ b/main.html
@@ -96,8 +96,8 @@
         <nav class="navMenu">
           <a href="index.html">Home</a>
           <a href="blog.html">Blog</a>
-          <a href="#">Work</a>
-          <a href="#">About</a>
+          <a href="work.html">Work</a>
+          <a href="about.html">About</a>
           <div class="dot"></div>
         </nav>
       </body>
