--- a/work.html
+++ b/work.html
@@ -8,49 +8,44 @@
 </head>
 
 <style>
-    button {
-  /* Variables */
- --button_radius: 0.75em;
- --button_color: #e8e8e8;
- --button_outline_color: #000000;
- font-size: 17px;
- font-weight: bold;
- border: none;
- border-radius: var(--button_radius);
- background: var(--button_outline_color);
+    
+.button {
+  --bg: #000;
+  --hover-bg: #ff90e8;
+  --hover-text: #000;
+  color: #fff;
+  border: 2px solid var(--bg);
+  border-radius: 8px;
+  padding: 1.6em 4em;
+  background: var(--bg);
+  transition: 0.2s;
+
+  margin-top: 25%;
+  margin-left: 25%;
+
 }
 
-.button_top {
- display: block;
- box-sizing: border-box;
- border: 2px solid var(--button_outline_color);
- border-radius: var(--button_radius);
- padding: 0.75em 1.5em;
- background: var(--button_color);
- color: var(--button_outline_color);
- transform: translateY(-0.2em);
- transition: transform 0.1s ease;
+.button:hover {
+  color: var(--hover-text);
+  transform: translate(-0.25rem,-0.25rem);
+  background: var(--hover-bg);
+  box-shadow: 0.25rem 0.25rem var(--bg);
 }
 
-button:hover .button_top {
- transform: translateY(-0.33em);
-}
-
-button:active .button_top {
- transform: translateY(0);
+.button:active {
+  transform: translate(0);
+  box-shadow: none;
 }
 </style>
 
 <body>
-    <a href="games/snake.html"><button>
-        <span class="button_top"> snake
-        </span>
-      </button>
+    <a href="games/snake.html"><button class="button">
+      snake
+  </button>
     </a>
-    <a href="games/tetris.html"><button>
-        <span class="button_top"> tetris
-        </span>
-      </button>
+    <a href="games/tetris.html"><button class="button">
+      tetris
+  </button>
     </a>
 
 </body>
