--- a/main.html
+++ b/main.html
@@ -94,10 +94,9 @@
    
     <body>
         <nav class="navMenu">
-          <a href="index.html">Home</a>
-          <a href="blog.html">Blog</a>
-          <a href="work.html">Work</a>
-          <a href="about.html">About</a>
+          <a href="index.html">home</a>
+          <a href="work.html">work</a>
+          <a href="about.html">about</a>
           <div class="dot"></div>
         </nav>
       </body>
