--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>ig: @akacannon</title>
     <style>
         @font-face {
             font-family: dsc;
@@ -32,7 +32,6 @@ background-color: #fff;">
             </h1>
         </div>
         
-        
         <a href="main.html"><img style="
         width: 16rem;
         padding-left: 43%;
@@ -41,5 +40,11 @@ background-color: #fff;">
         </a>
     </main>
 
+    <h1 style="
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    padding-top: 18%;
+    ">por cierto tienes que clickear en el puto minion</h1>
+</div>
 </body>
 </html>
