--- a/index.html
+++ b/index.html
@@ -1,169 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto sin nombre</title>
 
     <style>
-       
-       * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
 
-header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 30px 10%;
-  background-color: #24252a;
-}
+      header {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 30px 10%;
+        background-color: #24252a;
+      }
 
-.logo {
-  margin-right: auto;
-}
+      .logo {
+        margin-right: auto;
+      }
 
-.nav__links {
-  list-style: none;
-  display: flex;
-}
+      .n_li {
+        list-style: none;
+        display: flex;
+      }
 
-.nav__links a,
-.cta,
-.overlay__content a {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  color: #edf0f1;
-  text-decoration: none;
-}
+      .n_li a,
+      .cta,
+      .o_li a {
+        font-family: "Montserrat", sans-serif;
+        font-weight: 500;
+        color: #edf0f1;
+        text-decoration: none;
+      }
 
-.nav__links li {
-  padding: 0px 20px;
-}
+      .n_li li {
+        padding: 0px 20px;
+      }
 
-.nav__links li a {
-  transition: all 0.3s ease 0s;
-}
+      .n_li li a {
+        transition: all 0.3s ease 0s;
+      }
 
-.nav__links li a:hover {
-  color: #0088a9;
-}
+      .n_li li a:hover {
+        color: #0088a9;
+      }
 
-.cta {
-  margin-left: 20px;
-  padding: 9px 25px;
-  background-color: rgba(0, 136, 169, 1);
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-}
+      .cta {
+        margin-left: 20px;
+        padding: 9px 25px;
+        background-color: rgba(0, 136, 169, 1);
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        transition: all 0.3s ease 0s;
+      }
 
-.cta:hover {
-  background-color: rgba(0, 136, 169, 0.8);
-}
+      .cta:hover {
+        background-color: rgba(0, 136, 169, 0.8);
+      }
 
-/* Mobile Nav */
+      /* Mobile Nav */
 
-.menu {
-  display: none;
-}
+      .menu {
+        display: none;
+      }
 
-.overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  background-color: #24252a;
-  overflow-x: hidden;
-  transition: all 0.5s ease 0s;
-}
+      .overlay {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        background-color: #24252a;
+        overflow-x: hidden;
+        transition: all 0.5s ease 0s;
+      }
 
-.overlay--active {
-  width: 100%;
-}
+      .overlay--active {
+        width: 100%;
+      }
 
-.overlay__content {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+      .o_li {
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
 
-.overlay a {
-  padding: 15px;
-  font-size: 36px;
-  display: block;
-  transition: all 0.3s ease 0s;
-}
+      .overlay a {
+        padding: 15px;
+        font-size: 36px;
+        display: block;
+        transition: all 0.3s ease 0s;
+      }
 
-.overlay a:hover,
-.overlay a:focus {
-  color: #0088a9;
-}
-.overlay .close {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-  color: #edf0f1;
-  cursor: pointer;
-}
+      .overlay a:hover,
+      .overlay a:focus {
+        color: #0088a9;
+      }
+      .overlay .close {
+        position: absolute;
+        top: 20px;
+        right: 45px;
+        font-size: 60px;
+        color: #edf0f1;
+        cursor: pointer;
+      }
 
-@media screen and (max-height: 450px) {
-  .overlay a {
-    font-size: 20px;
-  }
-  .overlay .close {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
-}
+      @media screen and (max-height: 450px) {
+        .overlay a {
+          font-size: 20px;
+        }
+        .overlay .close {
+          font-size: 40px;
+          top: 15px;
+          right: 35px;
+        }
+      }
 
-@media only screen and (max-width: 800px) {
-  .nav__links,
-  .cta {
-    display: none;
-  }
-  .menu {
-    display: initial;
-  }
-}
-
-
+      @media only screen and (max-width: 800px) {
+        .n_li,
+        .cta {
+          display: none;
+        }
+        .menu {
+          display: initial;
+        }
+      }
     </style>
-
-</head>
-<body>
-    
+  </head>
+  <body>
     <header>
-        <a class="logo" href="/"><img src="images/logo.svg" alt="logo"></a>
-        <nav>
-            <ul class="nav__links">
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="#">Contact</a>
-        <p class="menu cta">Menu</p>
+      <a class="logo" href="/"><img src="img/logo.png" alt="logo" /></a>
+      <nav>
+        <ul class="n_li">
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Socials</a></li>
+        </ul>
+      </nav>
+      <a class="cta" href="#">Contact</a>
+      <p class="menu cta">Menu</p>
     </header>
-    <div id="mobile__menu" class="overlay">
-        <a class="close">&times;</a>
-        <div class="overlay__content">
-            <a href="#">Services</a>
-            <a href="#">Projects</a>
-            <a href="#">About</a>
-        </div>
+    <div id="m_menu" class="overlay">
+      <a class="close">&times;</a>
+      <div class="o_li">
+        <a href="#">Services</a>
+        <a href="#">Projects</a>
+        <a href="#">Socials</a>
+      </div>
     </div>
     <script type="text/javascript" src="src/mobile.js"></script>
-
-</body>
+  </body>
 </html>
