--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <a class="logo" href="/"><img src="img/logo.png" alt="logo" /></a>
       <nav>
         <ul class="n_li">
-          <li><a href="#">Projects</a></li>
+          <li><a href="#">Latest</a></li>
         </ul>
       </nav>
       <a class="cta" href="#">Contact</a>
@@ -152,7 +152,7 @@
     <div id="m_menu" class="overlay">
       <a class="close">&times;</a>
       <div class="o_li">
-        <a href="#">Projects</a>
+        <a href="#">Latest</a>
       </div>
     </div>
     <script type="text/javascript" src="src/mobile.js"></script>
