--- a/.s1/LatestInfo.html
+++ b/.s1/LatestInfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main - </title>
+    <title>Latest Info - </title>
     <script type="text/javascript" src="src/express.js"></script>
 
     <style>
@@ -144,10 +144,10 @@
       <a class="logo" href="/"><img src="img/logo.png" alt="logo" /></a>
       <nav>
         <ul class="n_li">
-          <li><a href=".s1/LatestInfo.html">Latest Info</a></li>
+          <li><a href="#">Latest</a></li>
         </ul>
       </nav>
-      <a class="cta" href=".s1/Contact.html">Contact</a>
+      <a class="cta" href="Contact.html">Contact</a>
       <p class="menu cta">Menu</p>
     </header>
     <div id="m_menu" class="overlay">
