--- a/index.html
+++ b/index.html
@@ -137,6 +137,26 @@
           display: initial;
         }
       }
+
+      main{
+        background: #272727;
+        width: 100%;
+        height: 100%;
+      }
+
+      .banner{
+
+      }
+
+      .titulo{
+        color: #000;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 300;
+        font-size: 30px;
+      }
+
+
+
     </style>
   </head>
   <body>
@@ -156,6 +176,16 @@
         <a href="#">Latest</a>
       </div>
     </div>
+
+    <main>
+
+      <div class="banner">
+        <h1 class="titulo"></h1>
+      </div>
+
+    </main>
+
+
     <script type="text/javascript" src="src/mobile.js"></script>
   </body>
 </html>
