--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>tres en raya</h1>
+    <h1 class="title">tres en raya</h1>
     <div id="tablero">
       <div class="casilla" id="casilla-0"></div>
       <div class="casilla" id="casilla-1"></div>
@@ -18,7 +18,7 @@
       <div class="casilla" id="casilla-7"></div>
       <div class="casilla" id="casilla-8"></div>
     </div>
-    <div id="jugadorActual">Turno del jugador X</div>
+    <div id="jugadorActual">turno: x</div>
     <button id="reiniciar">Reiniciar</button>
     <div class="mensaje" id="mensaje"></div>
     <script src="app.js"></script>
