--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main><h1 class="cnrxad">cnrxad</h1></main>
   </body>
 </html>
 
@@ -69,5 +69,14 @@
   }
   #github {
     margin-left: 140vh;
+  }
+
+  .cnrxad {
+    text-align: center;
+    margin-top: 10vh;
+    color: #fff;
+    font-family: Arial;
+    font-style: italic;
+    font-size: 10vh;
   }
 </style>
