--- a/index.html
+++ b/index.html
@@ -3,80 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>cnrxad</title>
   </head>
-
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#" id="logo">cnrxad</a></li>
-          <li><a href="">work</a></li>
-          <li><a href="">about</a></li>
-          <li>
-            <a href="https://github.com/cnrxad" target="_blank" id="github"
-              >github</a
-            >
-          </li>
-          <li>
-            <a href="https://acannonbladde@gmail.com" target="_blank">mail</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main><h1 class="cnrxad">cnrxad</h1></main>
+    <div class="parent">
+      <div class="header"></div>
+      <div class="header-img">
+        <a><img src="https://pbs.twimg.com/profile_images/1692931853768945664/-PFUrYru_400x400.jpg" alt="yo" /></a>
+      </div>
+      <div class="header-text">
+        <a href="#">cnrxad</a>
+        <a href="#">explore</a>
+        <a href="#">contact</a>
+      </div>
+      <div class="main"></div>
+      <div class="footer"></div>
+    </div>
   </body>
 </html>
-
-<style>
-  @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
-  @import url("https://fonts.googleapis.com/css2?family=Caprasimo&display=swap");
-  body {
-    margin: 0;
-    padding: 0;
-    background-image: url(wallpaperflare.com_wallpaper.jpg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  header {
-    margin-top: 5vh;
-  }
-  ul li {
-    list-style: none;
-    display: inline;
-    margin-right: 5vh;
-  }
-  ul li a {
-    color: #fff;
-    user-select: none;
-    text-transform: uppercase;
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    transition: 0.3s ease-in-out;
-  }
-  #logo {
-    background-color: #fff;
-    color: #191d36;
-    padding: 0.4%;
-    font-family: "Caprasimo", cursive;
-    text-transform: lowercase;
-  }
-  #logo:hover {
-    transition: 0.3s ease-in-out;
-    background-color: unset;
-    color: #fff;
-  }
-  #github {
-    margin-left: 140vh;
-  }
-
-  .cnrxad {
-    text-align: center;
-    margin-top: 10vh;
-    color: #fff;
-    font-family: Arial;
-    font-style: italic;
-    font-size: 10vh;
-  }
-</style>
