--- a/index.html
+++ b/index.html
@@ -6,18 +6,6 @@
     <link rel="stylesheet" href="style.css" />
     <title>cnrxad</title>
   </head>
-    <div class="parent">
-      <div class="header"></div>
-      <div class="header-img">
-        <a><img src="https://pbs.twimg.com/profile_images/1692931853768945664/-PFUrYru_400x400.jpg" alt="yo" /></a>
-      </div>
-      <div class="header-text">
-        <a href="#">cnrxad</a>
-        <a href="#">explore</a>
-        <a href="#">contact</a>
-      </div>
-      <div class="main"></div>
-      <div class="footer"></div>
-    </div>
+  <h1 style="color: black; text-align: center;">hola tonto que miras</h1>
   </body>
 </html>
